# LogLense

./: .gitignore  LICENSE  README.md  pyproject.toml
loglens/: exporter.py  filters.py  main.py  parser.py  watcher.py
tests/: test_parser.py
