[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loglens"
version = "0.5.0"
description = "A smart CLI log parser, filter, and watcher for developers"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["log", "parser", "cli", "filter", "tail", "devtools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: System :: Logging",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
loglens = "loglens.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loglens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
